--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <script src="./js/countScore.js"></script>
     <script src="./js/storeScore.js"></script>
     <script src="./js/out_function.js"></script>
-    <script src="./js/ballCount.js"></script>
-    <script src="./js/strikeCount.js"></script>
+    <script src="./js/ball_count.js"></script>
     <script src="./js/dashBoard.js"></script>
     <script src="./js/countLight.js"></script>
     <script src="./js/scoreCalculator.js"></script>
